[Edit] : Resume Work

--- a/index.html
+++ b/index.html
@@ -27,6 +27,28 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <script src=
+    "https://smtpjs.com/v3/smtp.js">
+  </script>
+
+  <script type="text/javascript">
+		function sendEmail() {
+			// Email.send({
+			// 	Host: "smtp.gmail.com",
+			// 	Username : "###@gmail.com",
+			// 	Password : "###",
+			// 	To : 'l2edeem@gmail.com',
+			// 	From : "ougridtopkiller@gmail.com",
+			// 	Subject : "Test Send Email",
+			// 	Body : "From Test",
+			// })
+			// .then(function(message){
+			// 	alert("mail sent successfully")
+			// });
+      alert("Server Send Mail Error.");
+		}
+	</script>
+
 </head>
 
 <body>
@@ -51,10 +73,10 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://line.me/ti/p/8rw7vtnzs-" class="linkedin" target="_blank"><i class="bi bi-line"></i></a>
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://instagram.com/top.nymous?igshid=ZDdkNTZiNTM=" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
       </div>
     </div>
   </header><!-- End Header -->
@@ -72,7 +94,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/me.jpg" class="img-fluid" alt="">
+          <img style="border:#4233ff" src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>PROFILE</h3>
@@ -98,10 +120,10 @@
               </ul>
             </div>
           </div>
-          <p>
+          <!-- <p>
             Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
             Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-          </p>
+          </p> -->
         </div>
       </div>
 
@@ -123,15 +145,15 @@
         <div class="col-lg-3 col-md-6">
           <div class="count-box">
             <i class="bi bi-emoji-smile"></i>
-            <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Happy Clients</p>
+            <span data-purecounter-start="0" data-purecounter-end="165" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Fix Bug</p>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="bi bi-headset"></i>
-            <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="250" data-purecounter-duration="1" class="purecounter"></span>
             <p>Hours Of Support</p>
           </div>
         </div>
@@ -336,58 +358,92 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Sumary</h3>
-          <div class="resume-item pb-0">
-            <h4>Alice Barkley</h4>
-            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-            <p>
-            <ul>
-              <li>Portland par 127,Orlando, FL</li>
-              <li>(123) 456-7891</li>
-              <li>alice.barkley@example.com</li>
-            </ul>
-            </p>
-          </div>
-
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>Master of Fine Arts &amp; Graphic Design</h4>
-            <h5>2015 - 2016</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+            <h4>Rattanabundit University</h4>
+            <h5>2013 - 2016</h5>
+            <p><em>Faculty of Engineer Major Computer Engineering</em></p>
+            <p>GPA : 3.11</p>
           </div>
           <div class="resume-item">
             <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
             <h5>2010 - 2014</h5>
             <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+            <p>GPA : 3.11</p>
+          </div>
+          <div class="resume-item">
+            <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
+            <h5>2010 - 2014</h5>
+            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+            <p>GPA : 3.11</p>
           </div>
         </div>
         <div class="col-lg-6">
-          <h3 class="resume-title">Professional Experience</h3>
+          <h3 class="resume-title">Work Experience</h3>
           <div class="resume-item">
-            <h4>Senior graphic design specialist</h4>
-            <h5>2019 - Present</h5>
-            <p><em>Experion, New York, NY </em></p>
+            <h4>The Viriyah Insurance Public Company limited</h4>
+            <h5>Feb 2023 - Present</h5>
+            <p><em>Position : Programmer</em></p>
             <p>
             <ul>
-              <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              <li>Develop Console Application, Web Application, API, JSReport, .NET Framework, .NET Core</Frame></li>
+              <li>Fixbug Program</li>
+              <li>...</li>
+              <li>...</li>
             </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>Graphic design specialist</h4>
-            <h5>2017 - 2018</h5>
-            <p><em>Stepping Stone Advertising, New York, NY</em></p>
+            <h4>IT One (Project SCG)</h4>
+            <h5>Aug 2022 - Jan 2023</h5>
+            <p><em>Position : Programmer</em></p>
             <p>
             <ul>
-              <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-              <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-              <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-              <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              <li>Design UX/UI and Database to Project.</li>
+              <li>Confirm Design and Present detail, Training to User.</li>
+              <li>Coding API .NET Core 3.1-6.0</li>
+              <li>Develop Chatbot, Chat Online realtime and Notification.</li>
+              <li>Signal R</li>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>Tech Soft Holding Co,.Ltd</h4>
+            <h5>Oct 2021 - July 2022</h5>
+            <p><em>Position : Programmer</em></p>
+            <p>
+            <ul>
+              <li>Developed C# .NET Core, .NET Framwork, MVC.</li>
+              <li>Design and Develop UI and API application Umay plus.</li>
+              <li>Rabbit MQ, SSIS, Rest API.</li>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>NTN Solution Co,.Ltd</h4>
+            <h5>Jun 2020 - Sep 2021</h5>
+            <p><em>Position : Programmer</em></p>
+            <p>
+            <ul>
+              <li>Develop and modify ERP software from legacy system of Customer.</li>
+              <li>Edit a Web Application retrieved from a database using ASP, Visual Basic JavaScript, C# .NET</li>
+              <li>Write and develop programs according to user requirements.</li>
+              <li>Fixbug Program/Web Application as assigned.</li>
+              <li>Use SQL Statement and Stored procedure in program Development.</li>
+              <li>Coding API send and recieve data using json generate schema.</li>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>AIS Company</h4>
+            <h5>Nov 2018 - May 2020</h5>
+            <p><em>Position : Programmer</em></p>
+            <p>
+            <ul>
+              <li>Simulate Message From Database To SUT (System Under Test).</li>
+              <li>Loadtest Performance Application to any Potocal.</li>
+              <li>Config Equinox.</li>
+              <li>Config XML language.</li>
             </ul>
             </p>
           </div>
@@ -499,7 +555,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>A108 Adam Street, New York, NY 535022</p>
+            <p>54/9 Astra Condominium Ratchada 32 yak 1 Road, Chankasem Sub-district, Chatuchak District, Bangkok 10900</p>
           </div>
         </div>
 
@@ -508,11 +564,10 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="https://line.me/ti/p/8rw7vtnzs-" class="linkedin" target="_blank"><i class="bi bi-line"></i></a>
               <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://instagram.com/top.nymous?igshid=ZDdkNTZiNTM=" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
             </div>
           </div>
         </div>
@@ -521,19 +576,19 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>contact@example.com</p>
+            <p>Ougrid3top@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <p>+1 5589 55488 55</p>
+            <p>+66 9 2280 1290</p>
           </div>
         </div>
       </div>
 
-      <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
+      <form onsubmit="return sendEmail(this)" method="post" role="form" class="php-email-form mt-4">
         <div class="row">
           <div class="col-md-6 form-group">
             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -553,14 +608,16 @@
           <div class="error-message"></div>
           <div class="sent-message">Your message has been sent. Thank you!</div>
         </div>
-        <div class="text-center"><button type="submit">Send Message</button></div>
+        <div class="text-center">
+          <button type="submit">Send Message</button>
+        </div>
       </form>
 
     </div>
   </section><!-- End Contact Section -->
 
   <div class="credits">
-    Credit by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    Credit by <a href="https://bootstrapmade.com/" target="_blank">BootstrapMade</a>
   </div>
 
   <!-- Vendor JS Files -->
