--- a/index.html
+++ b/index.html
@@ -366,16 +366,16 @@
             <p>GPA : 3.11</p>
           </div>
           <div class="resume-item">
-            <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-            <h5>2010 - 2014</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>GPA : 3.11</p>
+            <h4>Ratrard School</h4>
+            <h5>2010 - 2013</h5>
+            <p><em>Major of Mathematics and Science</em></p>
+            <p>GPA : 3.03</p>
           </div>
           <div class="resume-item">
-            <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-            <h5>2010 - 2014</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>GPA : 3.11</p>
+            <h4>Ratrard School</h4>
+            <h5>2007 - 2010</h5>
+            <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p> -->
+            <p>GPA : 3.23</p>
           </div>
         </div>
         <div class="col-lg-6">
