--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img style="border:#4233ff" src="assets/img/me.jpg" class="img-fluid" alt="">
+          <img style="border:#4233ff" src="assets/img/me4.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>PROFILE</h3>
