--- a/index.html
+++ b/index.html
@@ -386,10 +386,11 @@
             <p><em>Position : Programmer</em></p>
             <p>
             <ul>
-              <li>Develop Console Application, Web Application, API, JSReport, .NET Framework, .NET Core</Frame></li>
-              <li>Fixbug Program</li>
-              <li>...</li>
-              <li>...</li>
+              <li>Develop Console Application, Web Application, API, .NET Framework, .NET Core</Frame></li>
+              <li>Research Program and Fixbug Issue</li>
+              <li>Develop SQL Server Integration Services (SSIS) FTP File, Send Mail</li>
+              <li>Develop JSReport, iTextPDF Connect API return JSON</li>
+              <li>Develop Stored Procedure SQL Server</li>
             </ul>
             </p>
           </div>
